@@ -15,6 +15,7 @@ jobs:
     name: ${{ matrix.distro }}
     runs-on: ubuntu-latest
     container: symless/synergy-core:${{ matrix.distro }}
+    timeout-minutes: 10
 
     env:
       GIT_COMMIT: ${{ github.sha }}
