@@ -13,6 +13,7 @@ concurrency:
 jobs:
   test-macos:
     runs-on: ${{ matrix.runtime.os }}
+    timeout-minutes: 10
 
     defaults:
       run:
