@@ -13,6 +13,7 @@ concurrency:
 jobs:
   test-windows:
     runs-on: windows-latest
+    timeout-minutes: 10
 
     env:
       GIT_COMMIT: ${{ github.sha }}
