@@ -6,6 +6,7 @@ on:
 jobs:
   stale-issues:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - uses: actions/stale@v6
